# agll

./: .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: version.c
tools/: args.mjs  gen_agll.mjs  gl.d.ts  package-lock.json  package.json  utils.d.ts  utils.mjs
tools/cpp/: enum.mjs  header.mjs  macro.mjs  typedef.mjs
tools/gl/: agll.c  agll.h  fetch-gl.mjs  fetch-glx.mjs  fetch-khr.mjs  fetch-wgl.mjs  gen-commands.mjs  gen-cpp.mjs  gen-enums.mjs  gen-types.mjs  registry.mjs  utils.mjs
